--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "diff_pd"]
-	path = lib/physical_engine/diff_pd_public
+[submodule "lib/physical_engine/diff_pd"]
+	path = lib/physical_engine/diff_pd
 	url = https://github.com/mit-gfx/diff_pd_public.git
