--- a/confs/wmask.conf
+++ b/confs/wmask.conf
@@ -64,7 +64,7 @@ model {
 
     rendering_network {
         d_feature = 256
-        mode = idr
+        mode = no_view_dir
         d_in = 9
         d_out = 3
         d_hidden = 256
