--- a/confs/wmask_js_bk_single_multi_qrs_obj5.conf
+++ b/confs/wmask_js_bk_single_multi_qrs_obj5.conf
@@ -14,10 +14,10 @@ dataset {
     data_dir = ./public_data/CASE_NAME/
     render_cameras_name = cameras_sphere.json
     object_cameras_name = cameras_sphere.json
-    frame_count = 20
+    frame_count = 60
     camera_count = 1
     json_type = merged
-    pic_mode = jpg
+    pic_mode = png
     focus_rays_in_mask = False
     with_sphere = False
 }
