add sdf quary api for physical simualtor. complate the sdf collision code.

--- a/confs/womask_js_single_multi_qrs_obj5.conf
+++ b/confs/womask_js_single_multi_qrs_obj5.conf
@@ -17,7 +17,7 @@ dataset {
     frame_count = 20
     camera_count = 1
     json_type = merged
-    pic_mode = jpg
+    pic_mode = png
     focus_rays_in_mask = False
     with_sphere = False
 
