--- a/confs/womask_js_obj_single_multi_qrs.conf
+++ b/confs/womask_js_obj_single_multi_qrs.conf
@@ -14,12 +14,12 @@ dataset {
     data_dir = ./public_data/CASE_NAME/
     render_cameras_name = cameras_sphere.json
     object_cameras_name = cameras_sphere.json
-    frame_count = 39
+    frame_count = 40
     camera_count = 1
     json_type = merged
     pic_mode = png
     focus_rays_in_mask = False
-    bbox = 1
+    with_sphere = False
 
 }
 
