simplyfy the project

--- a/confs/wmask_blender_obstacle.conf
+++ b/confs/wmask_blender_obstacle.conf
@@ -14,12 +14,12 @@ dataset {
     data_dir = ./public_data/CASE_NAME/
     render_cameras_name = cameras_sphere.json
     object_cameras_name = cameras_sphere.json
-    frame_count = 43
+    frame_count = 40
     camera_count = 1
     json_type = merged
-    pic_mode = jpg
-
-
+    pic_mode = png
+    focus_rays_in_mask = False
+    with_sphere = False
 }
 
 train {
@@ -39,7 +39,7 @@ train {
     report_freq = 100
 
     igr_weight = 0.1
-    mask_weight = 0.1
+    mask_weight = 0.2  # try 0.2 next
 }
 
 model {
