--- a/confs/wmask_blender_bunny.conf
+++ b/confs/wmask_blender_bunny.conf
@@ -20,6 +20,9 @@ dataset {
     pic_mode = png
     focus_rays_in_mask = False
     with_sphere = False
+    with_bbox = True
+    bbox_min = [-0.1, -0.1, 0]
+    bbox_max = [0.3, 0.3, 0.3]
 }
 
 train {
