--- a/confs/wmask_blender_bunny.conf
+++ b/confs/wmask_blender_bunny.conf
@@ -1,5 +1,4 @@
-# js_bk means camera is recognized as json files, and the bk means only contains background information
-, single means the camera_count = 1
+# js_bk means camera is recognized as json files, and the bk means only contains background information, single means the camera_count = 1
 # json_type: separate_per_frame means each frame contains one dictionary
 # , on the other hand, it means the dictionary is combined together
 general {
@@ -23,8 +22,8 @@ dataset {
     focus_rays_in_mask = False
     with_sphere = False
     with_bbox = True
-    bbox_min = [-0.05, -0.05, -0.05]
-    bbox_max = [0.04, 0.06, 0.07]
+    bbox_min = [-0.15, -0.15, -0.15]
+    bbox_max = [0.14, 0.16, 0.17]
 }
 
 train {
